--- a/index2.html
+++ b/index2.html
@@ -67,7 +67,9 @@
         var options = {
     "configure": {
         "enabled": true,
-        "filter": "physics"
+        "filter": [
+            "physics"
+        ]
     },
     "edges": {
         "color": {
