--- a/s1_weekly_network1.html
+++ b/s1_weekly_network1.html
@@ -88,8 +88,8 @@
                   
 
                   // parsing and collecting nodes and edges from the python
-                  nodes = new vis.DataSet([{"color": "#4dc0b5", "id": 70, "label": "repurpos", "shape": "dot", "size": 9, "title": "Sadia, Mariana"}, {"color": "#4dc0b5", "id": 78, "label": "disassembl", "shape": "dot", "size": 6, "title": "Zhanlan"}, {"color": "#f6993f", "id": 21, "label": "electron", "shape": "dot", "size": 6, "title": "Katie"}, {"color": "#f6993f", "id": 22, "label": "electr", "shape": "dot", "size": 6, "title": "Katie"}, {"color": "#4dc0b5", "id": 62, "label": "reflect", "shape": "dot", "size": 6, "title": "Katie"}, {"color": "#4dc0b5", "id": 68, "label": "repair", "shape": "dot", "size": 12, "title": "Katie, Andrea, Heidi"}, {"color": "#38c172", "id": 53, "label": "logic", "shape": "dot", "size": 6, "title": "Andrea"}, {"color": "#4dc0b5", "id": 64, "label": "rethink", "shape": "dot", "size": 6, "title": "Kiki"}]);
-                  edges = new vis.DataSet([{"from": 70, "hidden": true, "to": 78}, {"from": 70, "hidden": true, "to": 62}, {"from": 70, "hidden": true, "to": 68}, {"from": 70, "hidden": true, "to": 64}, {"from": 78, "hidden": true, "to": 62}, {"from": 78, "hidden": true, "to": 68}, {"from": 78, "hidden": true, "to": 64}, {"from": 21, "hidden": true, "to": 22}, {"from": 62, "hidden": true, "to": 68}, {"from": 62, "hidden": true, "to": 64}, {"from": 68, "hidden": true, "to": 64}]);
+                  nodes = new vis.DataSet([{"color": "#DEEBF7", "id": 0, "label": "lasercut", "shape": "dot", "title": "Week1"}, {"color": "#DEEBF7", "id": 1, "label": "3dprint", "shape": "dot", "title": "Week1"}, {"color": "#DEEBF7", "id": 4, "label": "debug", "shape": "dot", "title": "Week1"}, {"color": "#DEEBF7", "id": 5, "label": "trial", "shape": "dot", "title": "Week1"}]);
+                  edges = new vis.DataSet([{"from": 4, "to": 5}]);
 
                   nodeColors = {};
                   allNodes = nodes.get({ returnType: "Object" });
@@ -120,14 +120,6 @@
     },
     "physics": {
         "enabled": true,
-        "repulsion": {
-            "centralGravity": 0.9,
-            "damping": 0.09,
-            "nodeDistance": 100,
-            "springConstant": 0.05,
-            "springLength": 50
-        },
-        "solver": "repulsion",
         "stabilization": {
             "enabled": true,
             "fit": true,
